@@ -1,5 +1,19 @@
 # Changelog
 
+## [1.1.0](https://github.com/JoanRoucoux/starter-generator/compare/v1.0.0...v1.1.0) (2026-08-02)
+
+
+### Features
+
+* add java starter support (rename, replaceAll, base-package prompt) ([4505ed9](https://github.com/JoanRoucoux/starter-generator/commit/4505ed91117d83f6700ed625abaaf709338d4a0b))
+* support starters with optional modules, plus a way to add them later ([5b460bd](https://github.com/JoanRoucoux/starter-generator/commit/5b460bd0b5385ca7580965b7743fc1aa47d93a04))
+
+
+### Bug Fixes
+
+* correct the web smoke test's expected routes file name ([8562a15](https://github.com/JoanRoucoux/starter-generator/commit/8562a156754bba6d78930754114c0a1cd900ce27))
+* honor a starter's copyIgnore when --add-modules fetches a local template ([fe1cee7](https://github.com/JoanRoucoux/starter-generator/commit/fe1cee7cba939f29191f4189c95ec8ece9e168fd))
+
 ## 1.0.0 (2026-07-21)
 
 
